# HaskellPWCrack

./: .gitignore
HaskellPWCrack/: HaskellPWCrack.cabal  startGhci
HaskellPWCrack/src/main/: Main.hs
HaskellPWCrack/src/main/PWCrack/: AttackMacOsXKeyChain.hs  Dictionaries.hs  DictionaryVariations.hs
HaskellPWCrack/src/test/IntegrationTests/KeyChainAttack/: Main.hs
HaskellPWCrack/src/test/IntegrationTests/MacOsXKeyChainAttack/: Main.hs  password.txt  testKeyChain.keychain
HaskellPWCrack/src/test/PWCrack/: DictionaryVariationsSpec.hs
HaskellPWCrack/src/test/UnitTests/: Main.hs
HaskellPWCrack/src/test/UnitTests/PWCrack/: DictionariesSpec.hs  DictionaryVariationsSpec.hs
